// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search.vue Rendering should render empty state correctly 1`] = `
<page-stub class="page__sticky-subheader">
  <stickysubheader-stub isvisible="true" class="page-subheader"><span class="title">SearchPage.title.searchTerm</span></stickysubheader-stub>
  <div class="container grid grid__content">
    <div class="full-width">
      <section class="section section--maps">
        <div class="section__title grid-cell title is-medium">SearchPage.sections.maps</div>
        <div class="js-grid__head--sticky">
          <!---->
          <!---->
          <ul class="grid-cell grid-cell--col12">
            <div class="is-caption text maps--empty">
              SearchPage.emptyText.maps
            </div>
          </ul>
        </div>
        <!---->
      </section>
      <section class="section section--datasets">
        <div class="section__title grid-cell title is-medium">SearchPage.sections.data</div>
        <div class="js-grid__head--sticky">
          <!---->
          <ul class="grid-cell grid-cell--col12">
            <div class="is-caption text data--empty">
              SearchPage.emptyText.datasets
            </div>
          </ul>
          <!---->
        </div>
        <!---->
      </section>
      <section class="section section--tags">
        <div class="section__title grid-cell title is-medium">SearchPage.sections.tags</div>
        <ul class="grid">
          <li class="grid-cell">
            <div class="is-caption text">
              SearchPage.emptyText.tags
            </div>
          </li>
        </ul>
        <!---->
        <!---->
      </section>
    </div>
  </div>
</page-stub>
`;

exports[`Search.vue Rendering should render fetching state correctly 1`] = `
<page-stub class="page__sticky-subheader">
  <stickysubheader-stub isvisible="true" class="page-subheader"><span class="title">
      SearchPage.title.allFetching
      <span class="loading"><img svg-inline="" src="../assets/icons/common/loading.svg" class="loading__svg"></span></span></stickysubheader-stub>
  <div class="container grid grid__content">
    <div class="full-width">
      <section class="section section--maps">
        <div class="section__title grid-cell title is-medium">SearchPage.sections.maps</div>
        <div class="js-grid__head--sticky">
          <div class="grid-cell grid-cell--noMargin grid-cell--col12 grid__head--sticky">
            <condensedmapheader-stub order="" orderdirection="" showviews="true"></condensedmapheader-stub>
          </div>
          <ul class="grid-cell grid-cell--col12">
            <li class="search-item">
              <mapcardfake-stub condensed="true" class="search-item"></mapcardfake-stub>
            </li>
            <li class="search-item">
              <mapcardfake-stub condensed="true" class="search-item"></mapcardfake-stub>
            </li>
            <li class="search-item">
              <mapcardfake-stub condensed="true" class="search-item"></mapcardfake-stub>
            </li>
            <li class="search-item">
              <mapcardfake-stub condensed="true" class="search-item"></mapcardfake-stub>
            </li>
            <li class="search-item">
              <mapcardfake-stub condensed="true" class="search-item"></mapcardfake-stub>
            </li>
            <li class="search-item">
              <mapcardfake-stub condensed="true" class="search-item"></mapcardfake-stub>
            </li>
          </ul>
          <!---->
        </div>
        <!---->
      </section>
      <section class="section section--datasets">
        <div class="section__title grid-cell title is-medium">SearchPage.sections.data</div>
        <div class="js-grid__head--sticky">
          <div class="grid-cell grid-cell--noMargin grid-cell--col12 grid__head--sticky">
            <datasetlistheader-stub order="" orderdirection=""></datasetlistheader-stub>
          </div>
          <!---->
          <ul class="grid-cell grid-cell--col12">
            <li class="search-item">
              <datasetcardfake-stub></datasetcardfake-stub>
            </li>
            <li class="search-item">
              <datasetcardfake-stub></datasetcardfake-stub>
            </li>
            <li class="search-item">
              <datasetcardfake-stub></datasetcardfake-stub>
            </li>
            <li class="search-item">
              <datasetcardfake-stub></datasetcardfake-stub>
            </li>
            <li class="search-item">
              <datasetcardfake-stub></datasetcardfake-stub>
            </li>
            <li class="search-item">
              <datasetcardfake-stub></datasetcardfake-stub>
            </li>
          </ul>
        </div>
        <!---->
      </section>
      <section class="section section--tags">
        <div class="section__title grid-cell title is-medium">SearchPage.sections.tags</div>
        <!---->
        <ul class="grid">
          <li class="search-item--tag grid-cell grid-cell--col4 grid-cell--col6--tablet grid-cell--col12--mobile">
            <faketagcard-stub></faketagcard-stub>
          </li>
          <li class="search-item--tag grid-cell grid-cell--col4 grid-cell--col6--tablet grid-cell--col12--mobile">
            <faketagcard-stub></faketagcard-stub>
          </li>
          <li class="search-item--tag grid-cell grid-cell--col4 grid-cell--col6--tablet grid-cell--col12--mobile">
            <faketagcard-stub></faketagcard-stub>
          </li>
          <li class="search-item--tag grid-cell grid-cell--col4 grid-cell--col6--tablet grid-cell--col12--mobile">
            <faketagcard-stub></faketagcard-stub>
          </li>
          <li class="search-item--tag grid-cell grid-cell--col4 grid-cell--col6--tablet grid-cell--col12--mobile">
            <faketagcard-stub></faketagcard-stub>
          </li>
          <li class="search-item--tag grid-cell grid-cell--col4 grid-cell--col6--tablet grid-cell--col12--mobile">
            <faketagcard-stub></faketagcard-stub>
          </li>
        </ul>
        <!---->
      </section>
    </div>
  </div>
</page-stub>
`;

exports[`Search.vue Rendering should render search results correctly 1`] = `
<page-stub class="page__sticky-subheader">
  <stickysubheader-stub isvisible="true" class="page-subheader"><span class="title">SearchPage.title.searchTerm</span></stickysubheader-stub>
  <div class="container grid grid__content">
    <div class="full-width">
      <section class="section section--maps has-pagination">
        <div class="section__title grid-cell title is-medium">SearchPage.sections.maps</div>
        <div class="js-grid__head--sticky">
          <div class="grid-cell grid-cell--noMargin grid-cell--col12 grid__head--sticky">
            <condensedmapheader-stub order="" orderdirection="" showviews="true"></condensedmapheader-stub>
          </div>
          <!---->
          <ul class="grid-cell grid-cell--col12">
            <li class="search-item">
              <mapcard-stub visualization="[object Object]" storeactiontype="search" condensed="true"></mapcard-stub>
            </li>
            <li class="search-item">
              <mapcard-stub visualization="[object Object]" storeactiontype="search" condensed="true"></mapcard-stub>
            </li>
            <!---->
          </ul>
        </div>
        <pagination-stub page="1" numpages="2"></pagination-stub>
      </section>
      <section class="section section--datasets">
        <div class="section__title grid-cell title is-medium">SearchPage.sections.data</div>
        <div class="js-grid__head--sticky">
          <div class="grid-cell grid-cell--noMargin grid-cell--col12 grid__head--sticky">
            <datasetlistheader-stub order="" orderdirection=""></datasetlistheader-stub>
          </div>
          <ul class="grid-cell grid-cell--col12">
            <li class="search-item">
              <datasetcard-stub dataset="[object Object]" storeactiontype="search"></datasetcard-stub>
            </li>
            <li class="search-item">
              <datasetcard-stub dataset="[object Object]" storeactiontype="search"></datasetcard-stub>
            </li>
            <!---->
          </ul>
          <!---->
        </div>
        <pagination-stub page="1" numpages="2" class="pagination-element"></pagination-stub>
      </section>
      <section class="section section--tags">
        <div class="section__title grid-cell title is-medium">SearchPage.sections.tags</div>
        <ul class="grid">
          <li class="grid-cell">
            <div class="is-caption text">
              SearchPage.emptyText.tags
            </div>
          </li>
        </ul>
        <!---->
        <!---->
      </section>
    </div>
  </div>
</page-stub>
`;
